<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:airbnb="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="324dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginStart="48dp"
                app:expandedTitleMarginEnd="64dp"
                app:title="">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    app:layout_collapseMode="parallax">

                <ImageView
                        android:id="@+id/movieImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        tools:ignore="ContentDescription"/>

                <View android:layout_width="match_parent"
                      android:layout_height="200dp"
                      android:layout_alignParentBottom="true"
                      android:background="@drawable/bg_gradient_bottom"/>

                <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/loadingImageMovie"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        airbnb:lottie_fileName="simple_loader.json"
                        airbnb:lottie_autoPlay="false"
                        airbnb:lottie_loop="true"/>

                <customviews.autoresize.AutoResizeTextView
                        android:id="@+id/btnPlayTrailer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:gravity="center"
                        android:textSize="@dimen/normalTextSize"
                        app:minSize="@dimen/smallTextSize"
                        app:maxSize="@dimen/mediumTextSize"
                        android:textColor="@android:color/white"
                        android:layout_above="@id/txtMovieDate"
                        android:padding="12dp"
                        android:shadowColor="@android:color/black"
                        android:shadowRadius="8"
                        android:shadowDx="2"
                        android:shadowDy="2"
                        app:fontFamily="@font/rowland_light"
                        android:background="@drawable/bg_semi_rounded"
                        android:text="@string/txt_play_trailer"
                        android:drawablePadding="12dp"
                        android:drawableEnd="@drawable/ic_play_button"
                        android:drawableRight="@drawable/ic_play_button"/>

                <customviews.autoresize.AutoResizeTextView
                        android:id="@+id/txtMovieDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="84dp"
                        android:gravity="center"
                        android:textSize="@dimen/normalTextSize"
                        app:minSize="@dimen/smallTextSize"
                        app:maxSize="@dimen/mediumTextSize"
                        android:padding="12dp"
                        android:textColor="@android:color/white"
                        android:shadowColor="@android:color/black"
                        android:shadowRadius="8"
                        android:shadowDx="2"
                        android:shadowDy="2"
                        app:fontFamily="@font/rowland_light"
                        android:background="@drawable/bg_semi_rounded"
                        android:text="@string/txt_sample_date"/>

                <customviews.autoresize.AutoResizeTextView
                        android:id="@+id/txtRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@id/ratingMovie"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:gravity="center"
                        android:textSize="@dimen/rateTextSize"
                        app:minSize="@dimen/smallTextSize"
                        app:maxSize="@dimen/rateTextSize"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:textColor="@android:color/white"
                        android:shadowColor="@android:color/black"
                        android:shadowRadius="8"
                        android:shadowDx="2"
                        android:shadowDy="2"
                        app:fontFamily="@font/monserrat"
                        android:text="@string/txt_sample_rate"/>

                <customviews.autoresize.AutoResizeTextView
                        android:id="@+id/txtCountVotes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@id/txtRating"
                        android:layout_toLeftOf="@id/txtRating"
                        android:layout_above="@id/ratingMovie"
                        android:gravity="center"
                        android:textSize="@dimen/normalTextSize"
                        app:minSize="@dimen/smallTextSize"
                        app:maxSize="@dimen/largeTextSize"
                        android:layout_marginEnd="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginBottom="12dp"
                        android:textColor="@android:color/white"
                        android:shadowColor="@android:color/black"
                        android:shadowRadius="8"
                        android:shadowDx="2"
                        android:shadowDy="2"
                        app:fontFamily="@font/monserrat"
                        android:text="@string/txt_count_votaciones"/>

                <androidx.appcompat.widget.AppCompatRatingBar
                        android:id="@+id/ratingMovie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:rating="1"
                        android:theme="@style/RatingStyle"
                        android:layout_marginBottom="84dp"/>

            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:layout_collapseMode="pin"
                    android:gravity="center_vertical">

                <ImageView
                        android:id="@+id/btnBack"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:background="@drawable/bg_circle_semi_transparent"
                        android:src="@drawable/ic_back"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:paddingEnd="8dp"
                        android:paddingStart="4dp"
                        android:paddingRight="8dp"
                        android:paddingLeft="4dp"
                        tools:ignore="ContentDescription"/>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/loadingDetailsMovie"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    airbnb:lottie_fileName="loading_animation.json"
                    airbnb:lottie_autoPlay="false"
                    airbnb:lottie_loop="true"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerGenres"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layoutAnimation="@anim/layout_animation_fall_down"/>

            <customviews.autoresize.AutoResizeTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="12dp"
                    android:textSize="@dimen/mediumTextSize"
                    app:minSize="@dimen/smallTextSize"
                    app:maxSize="@dimen/largeTextSize"
                    android:textColor="@color/colorPrimaryDark"
                    app:fontFamily="@font/monserrat"
                    android:text="@string/txt_movie_desc"/>

            <customviews.autoresize.AutoResizeTextView
                    android:id="@+id/txtDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:textSize="@dimen/normalTextSize"
                    app:minSize="@dimen/smallTextSize"
                    app:maxSize="@dimen/largeTextSize"
                    android:textColor="@color/light_gray"
                    app:fontFamily="@font/monserrat"
                    android:text="@string/txt_movie_desc"/>

            <customviews.autoresize.AutoResizeTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="12dp"
                    android:layout_marginTop="12dp"
                    android:textSize="@dimen/mediumTextSize"
                    app:minSize="@dimen/smallTextSize"
                    app:maxSize="@dimen/largeTextSize"
                    android:textColor="@color/colorPrimaryDark"
                    app:fontFamily="@font/monserrat"
                    android:text="@string/txt_about_film"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp">

                <customviews.autoresize.AutoResizeTextView
                        android:layout_width="0dp"
                        android:layout_weight="0.3"
                        android:layout_height="wrap_content"
                        android:gravity="top|start"
                        android:layout_marginStart="12dp"
                        android:layout_marginLeft="12dp"
                        android:textSize="@dimen/normalTextSize"
                        app:minSize="@dimen/smallTextSize"
                        app:maxSize="@dimen/largeTextSize"
                        android:textColor="@color/light_gray"
                        app:fontFamily="@font/monserrat"
                        android:text="@string/txt_original_title"/>

                <customviews.autoresize.AutoResizeTextView
                        android:id="@+id/txtOriginalTitle"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:layout_height="wrap_content"
                        android:gravity="top|start"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:textSize="@dimen/normalTextSize"
                        app:minSize="@dimen/smallTextSize"
                        app:maxSize="@dimen/largeTextSize"
                        android:textColor="@android:color/black"
                        app:fontFamily="@font/monserrat"
                        android:textStyle="bold"
                        android:text="@string/txt_original_title"/>
            </LinearLayout>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp">

                <Space
                        android:layout_width="0dp"
                        android:layout_weight="0.3"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginLeft="12dp"/>

                <customviews.autoresize.AutoResizeTextView
                        android:id="@+id/txtTagline"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:layout_height="wrap_content"
                        android:gravity="top|start"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:textSize="@dimen/normalTextSize"
                        app:minSize="@dimen/smallTextSize"
                        app:maxSize="@dimen/largeTextSize"
                        android:textColor="@android:color/black"
                        app:fontFamily="@font/monserrat"
                        android:textStyle="bold"
                        android:text="@string/txt_original_title"/>
            </LinearLayout>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp">

                <customviews.autoresize.AutoResizeTextView
                        android:layout_width="0dp"
                        android:layout_weight="0.3"
                        android:layout_height="wrap_content"
                        android:gravity="top|start"
                        android:layout_marginStart="12dp"
                        android:layout_marginLeft="12dp"
                        android:textSize="@dimen/normalTextSize"
                        app:minSize="@dimen/smallTextSize"
                        app:maxSize="@dimen/largeTextSize"
                        android:textColor="@color/light_gray"
                        app:fontFamily="@font/monserrat"
                        android:text="@string/txt_original_language"/>

                <customviews.autoresize.AutoResizeTextView
                        android:id="@+id/txtOriginalLanguage"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:textSize="@dimen/normalTextSize"
                        app:minSize="@dimen/smallTextSize"
                        app:maxSize="@dimen/largeTextSize"
                        android:textColor="@android:color/black"
                        app:fontFamily="@font/monserrat"
                        android:textStyle="bold"
                        android:text="@string/txt_original_title"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp">

                <customviews.autoresize.AutoResizeTextView
                        android:layout_width="0dp"
                        android:layout_weight="0.3"
                        android:layout_height="wrap_content"
                        android:gravity="top|start"
                        android:layout_marginStart="12dp"
                        android:layout_marginLeft="12dp"
                        android:textSize="@dimen/normalTextSize"
                        app:minSize="@dimen/smallTextSize"
                        app:maxSize="@dimen/largeTextSize"
                        android:textColor="@color/light_gray"
                        app:fontFamily="@font/monserrat"
                        android:text="@string/txt_promotional_page"/>

                <customviews.autoresize.AutoResizeTextView
                        android:id="@+id/txtHomePage"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:textSize="@dimen/normalTextSize"
                        app:minSize="@dimen/smallTextSize"
                        app:maxSize="@dimen/largeTextSize"
                        android:textColor="@android:color/black"
                        app:fontFamily="@font/monserrat"
                        android:textStyle="bold"
                        android:autoLink="web"
                        android:text="@string/txt_original_title"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>