<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:airbnb="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.MainActivity">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideBottomUpcoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="0dp"
            app:layout_constraintGuide_percent=".4"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideBottomPopular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="0dp"
            app:layout_constraintGuide_percent=".73"/>

    <RelativeLayout
            android:id="@+id/containerUpComing"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/guideBottomUpcoming">

        <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/loadingUpcoming"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                airbnb:lottie_fileName="loading_animation.json"
                airbnb:lottie_autoPlay="false"
                airbnb:lottie_loop="true"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerUpcoming"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layoutAnimation="@anim/layout_animation_fall_down"/>

    </RelativeLayout>

    <androidx.cardview.widget.CardView
            android:id="@+id/cardSearchMovies"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/guideBottomUpcoming"
            app:layout_constraintTop_toTopOf="@id/guideBottomUpcoming">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <customviews.autoresize.AutoResizeTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/hint_search"
                    android:textSize="@dimen/mediumTextSize"
                    app:minSize="@dimen/normalTextSize"
                    app:maxSize="@dimen/largeTextSize"
                    app:fontFamily="@font/rowland"
                    android:textColor="@color/light_gray"
                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="4dp"/>

            <ImageView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_search"
                    android:padding="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    tools:ignore="ContentDescription"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <customviews.autoresize.AutoResizeTextView
            android:id="@+id/txtTitlePopulate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/cardSearchMovies"
            android:text="@string/title_populates"
            android:textSize="@dimen/mediumTextSize"
            app:minSize="@dimen/normalTextSize"
            app:maxSize="@dimen/largeTextSize"
            app:fontFamily="@font/rowland_light"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/colorPrimaryDark"/>

    <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loadingPopulate"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/txtTitlePopulate"
            app:layout_constraintBottom_toTopOf="@id/guideBottomPopular"
            airbnb:lottie_fileName="skeleton_loading.json"
            airbnb:lottie_autoPlay="false"
            airbnb:lottie_loop="true"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerPopulates"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layoutAnimation="@anim/layout_animation_fall_down"
            app:layout_constraintTop_toBottomOf="@id/txtTitlePopulate"
            app:layout_constraintBottom_toTopOf="@id/guideBottomPopular"/>

    <customviews.autoresize.AutoResizeTextView
            android:id="@+id/txtTitleTopRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/guideBottomPopular"
            android:text="@string/title_top_rate"
            android:textSize="@dimen/mediumTextSize"
            app:minSize="@dimen/normalTextSize"
            app:maxSize="@dimen/largeTextSize"
            app:fontFamily="@font/rowland_light"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:layout_marginTop="12dp"
            android:textColor="@color/colorPrimaryDark"/>

    <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loadingTopRate"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/txtTitleTopRate"
            app:layout_constraintBottom_toBottomOf="parent"
            airbnb:lottie_fileName="skeleton_loading.json"
            airbnb:lottie_autoPlay="false"
            airbnb:lottie_loop="true"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerTopRate"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layoutAnimation="@anim/layout_animation_fall_down"
            app:layout_constraintTop_toBottomOf="@id/txtTitleTopRate"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>